Fixed overflow

--- a/client/src/components/footer/Footer.scss
+++ b/client/src/components/footer/Footer.scss
@@ -6,11 +6,14 @@
         padding-left: 1rem;
         padding-right: 1rem;
         transform: translateY(11%);
+        margin: 0;
         .footer-img1 {
             width: 17rem;
+            padding: 0;
         }
         .footer-img2 {
             width: 10rem;
+            padding: 0;
         }
     }
 }
