--- a/client/src/components/globeBanner/GlobeBanner.scss
+++ b/client/src/components/globeBanner/GlobeBanner.scss
@@ -94,11 +94,12 @@
             height: 8.5rem;
         }
         .w47 {
-            width: 12rem !important;
+            width: 11.5rem !important;
         }
         .row {
             padding-left: 1rem;
             padding-right: 1rem;
+            margin: 0;
         }
     }
 }
