--- a/client/src/global.scss
+++ b/client/src/global.scss
@@ -241,7 +241,3 @@ $font-weight-bold: 700;
 // X-Small devices (portrait phones, less than 576px)
 @media (max-width: 35.99875em) {
 }
-
-html, body {
-    overflow-x: hidden !important;
-}
