--- a/client/src/pages/home/components/stats/Stats.scss
+++ b/client/src/pages/home/components/stats/Stats.scss
@@ -37,13 +37,6 @@
 
 // Small devices (landscape phones, less than 768px)
 @media (max-width: 47.99875em) {
-    .stats {
-        .center-vertical-relative {
-            left: 50%;
-            transform: translateX(-50%);
-            top: 0;
-        }
-    }
 }
 
 // X-Small devices (portrait phones, less than 576px)
